# crocoddyl

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  setup.cfg
.github/workflows/: 1804.yml
bindings/: CMakeLists.txt
bindings/crocoddyl/python/: CMakeLists.txt  core.hpp  crocoddyl.cpp
bindings/crocoddyl/python/core/: state.hpp
bindings/python/: CMakeLists.txt
bindings/python/core/: state.cpp
bindings/python/crocoddyl/: CMakeLists.txt
crocoddyl/: CMakeLists.txt  callbacks.py
crocoddyl/locomotion/: centroidal_utils.py
examples/: CMakeLists.txt  bipedal_walking_from_foot_traj.py  jump.py  quadrupedal_walking_balancing.py  salto.py  talos_arm.py  walk.py
examples/locomotion/: CMakeLists.txt  conf_talos_warm_start.py  talos_warm_start.py
examples/sandbox/centroidal/: centroidal.py  display_centroidal.py  plot_centroidal.py  test_centroidal.py  timeopt_action.py  timeopt_pg.py  wpg.py
include/: CMakeLists.txt
include/crocoddyl/core/: state.hpp  state.hxx
src/: CMakeLists.txt
src/core/: state.hpp  state.hxx
unittest/: CMakeLists.txt  examples_logs.py  test_actions.cpp  test_activation.cpp  test_costs.py  test_impulses.cpp  test_locomotion.py  test_solvers.cpp  test_state.cpp
