CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/test.cmake)
INCLUDE(cmake/python.cmake)

SET(PROJECT_NAMESPACE loco-3d)
SET(PROJECT_NAME crocoddyl)
SET(PROJECT_DESCRIPTION "Contact RObot COntrol by Differential DYnamic programming Library")

SET(PROJECT_URL https://gepgitlab.laas.fr/${PROJECT_NAMESPACE}/${PROJECT_NAME})

SETUP_PROJECT()

FINDPYTHON()

ADD_SUBDIRECTORY(${PROJECT_NAME})
ADD_SUBDIRECTORY(unittest)
ADD_SUBDIRECTORY(examples)

SETUP_PROJECT_FINALIZE()
