
SET(${PROJECT_NAME}_HEADERS
  crocoddyl/core/state.hpp
  crocoddyl/core/state.hxx
  )

IF(UNIX)
  ADD_LIBRARY(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_HEADERS})
  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
  PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} eigen3)

  INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
ENDIF(UNIX)
