
SET(${PROJECT_NAME}_HEADERS
  core/state.hpp
  )

IF(UNIX)
  # Create target libpinocchio.so
  ADD_LIBRARY(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_HEADERS})
  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
  PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} eigen3)

  INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
ENDIF(UNIX)
